--- a/css/faq.css
+++ b/css/faq.css
@@ -59,6 +59,26 @@
     background-color: #1d704a; /* Darker blue on hover */
 }
 
+
+
+.menu a {
+    text-decoration: none;
+    color: black;
+    font-weight: normal;
+    display: inline-block;
+    transition: color 0.3s, font-weight 0.3s;
+}
+
+.menu a:hover {
+    color: #3E7D60;
+    font-weight: bold;
+}
+
+.menu a.active-menu {
+    color: #3E7D60;
+    font-weight: bold;
+}
+
 /* Responsive design for smaller screens */
 @media (max-width: 600px) {
     .main-content {
