--- a/css/lapor.css
+++ b/css/lapor.css
@@ -136,3 +136,21 @@ footer .btn-social:hover {
     padding: 10px 0;
     font-size: 0.8em;
 }
+
+.menu a {
+    text-decoration: none;
+    color: black;
+    font-weight: normal;
+    display: inline-block;
+    transition: color 0.3s, font-weight 0.3s;
+}
+
+.menu a:hover {
+    color: #3E7D60;
+    font-weight: bold;
+}
+
+.menu a.active-menu {
+    color: #3E7D60;
+    font-weight: bold;
+}
