--- a/css/style.css
+++ b/css/style.css
@@ -137,12 +137,28 @@ footer .btn-social:hover {
     border-color: #3E7D60;
 }
 
-.copyright p{
+.copyright {
+    background-color: #23272b;
     padding: 10px 0;
     font-size: 0.8em;
-    text-align: center;
 }
 
-.copyright {
-    background-color: black;
+
+
+.menu a {
+    text-decoration: none;
+    color: black;
+    font-weight: normal;
+    display: inline-block;
+    transition: color 0.3s, font-weight 0.3s;
+}
+
+.menu a:hover {
+    color: #3E7D60;
+    font-weight: bold;
+}
+
+.menu a.active-menu {
+    color: #3E7D60;
+    font-weight: bold;
 }
