--- a/css/lihat.css
+++ b/css/lihat.css
@@ -9,8 +9,7 @@
 
 /* Headings */
 .main-content h3 {
-    color: #333;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 24px;
     margin-bottom: 10px;
 }
